--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "express": "^4.16.4"
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
